src/parser/luseed_parser.py
from lexer.luseed_token import *
from luseed_error import *
from parser.grammar import *
import time

class TreeSegment:
    """
    Segment of the tree that contains the root node, the left node, and the right node (Originally applied for the Operator Precedence)
    """
    def __init__(self, left_node: Token, root_node: Token, right_node: Token):
        self.left_node = left_node
        self.root_node = root_node
        self.right_node = right_node
    
    def __repr__(self):
        if self.right_node == None and self.left_node != None:
            return f'({self.left_node}, {self.root_node})'

        elif self.right_node != None and self.left_node == None:
            return f'({self.root_node}, {self.right_node})'

        elif self.root_node == None:
            return f'({self.left_node}, {self.right_node})'

        elif self.right_node == None and self.left_node == None:
            return f'{self.root_node}'

        elif self.left_node == None and self.root_node == None:
            return f'{self.right_node}'

        else:
            return f'({self.left_node}, {self.root_node}, {self.right_node})'
    
class Parser:
    """
    Parses the tokens provided by the syntax analyzer.
    """
    def __init__(self, list: list):
        self.tk_list = list[0]
        self.line_list = list[1]
        self.idx_ctr = -1
        self.is_done = False
        self.idx_incr()
    
    def idx_incr(self):
        """
        Increments the value of the Index Counter and sets the current token.
        """
        self.idx_ctr += 1
        if self.idx_ctr < len(self.tk_list):
            self.curr_tok = self.tk_list[self.idx_ctr]
            self.look_for(["UNKNOWN_TOKEN"], self.curr_tok, Error.SyntaxError.UNKNOWN_TOKEN + self.curr_tok.line, False)
            if self.curr_tok.token in [CMNT_SINGLE, CMNT_MULTI]:
                self.idx_incr()
            
        else:
            self.is_done = True
            self.curr_tok = Token(self.curr_tok.line, " ",  "EOF")
            return

        return self.curr_tok

    def idx_dcr(self):
        """
        Decrements the index counter and sets the current token to the previous token.
        """
        self.idx_ctr -= 1

        self.curr_tok = self.tk_list[self.idx_ctr]
        return self.curr_tok

    def look_for(self, token: list, tok: Token, error: str, accept: bool):
        """
        Checks if the current token satisfies the specified token. If this is True, accept the given specified token, and not if False.
        """
        if (accept and tok.token in token) or (not accept and tok.token not in token):
            return tok
        
        self.parse_error(error, tok)

    def parse(self):
        """
        Starts the parsing process.
        """
        
        init_time = time.time()
        while not self.is_done:
            parse_res = self.stmnt()
            print(f"\n| - Abstract Syntax Tree - |")
            print(parse_res)

        final_time = time.time()
        elapsed_time = final_time - init_time

        print(f"\nSuccessful Parse!\nElapsed Parsing Time\t: {elapsed_time}")

    def parse_error(self, error: str, token: Token):
        """
        Handles the parser errors.
        """
        Error.SyntaxError(error, token, self.line_list).displayerror()

    def expr_parse(self):
        """
        Parses an expression. This is used mainly for assignment statements. 
        Ex. A = (3 * 5) + 2**4 
        """
        res = self.expr_or()
        
        self.look_for(OP_ASSIGNMENT.values(), self.curr_tok, Error.SyntaxError.INVALID_ASSIGN, False)
        self.look_for(["DLM_RPRN"], self.curr_tok, Error.SyntaxError.INVALID_PAREN, False)
        return res

    # Recursion function of each operation (LEVELED)
    def expr_or(self):
        return self.expr_operation(self.expr_and, EXPR_OR, 'L')
    
    def expr_and(self):
        return self.expr_operation(self.expr_eq, EXPR_AND, 'L')

    def expr_eq(self):
        return self.expr_operation(self.expr_rel, EXPR_EQ, 'L')

    def expr_rel(self):
        return self.expr_operation(self.expr_add, EXPR_REL, 'L')

    def expr_add(self):
        return self.expr_operation(self.expr_mul, EXPR_ADD, 'L')

    def expr_mul(self):
        return self.expr_operation(self.expr_un, EXPR_MUL, 'L')
    
    def expr_un(self):
        return self.expr_operation(self.expr_expo, EXPR_UN, 'L')

    def expr_expo(self):
        return self.expr_operation(self.atom, EXPR_EXPO, 'R')

    def atom(self):
        """
        Values that can be used in an expression.  
        This includes literal values, identifiers, lists, parenthetical expressions, and the input statement(for input statement).
        """
        curr_tok = self.curr_tok

        # Used for literals
        if curr_tok.token in LIT_DATA:
            self.idx_incr()
            return curr_tok

        # Used for Identifiers, Properties, Function Calls, and Methods
        elif curr_tok.token in [IDENTIFIER, "KW_THIS"]:
            return self.rule_iden()

        # Used for parenthetical expressions
        elif curr_tok.token == "DLM_LPRN":
            if self.tk_list[self.idx_ctr + 1].token in DATA_TYPE:
                res = self.cast_stmnt()

            else:
                res = self.expr_paren(self.atom_paren, True)
                self.idx_incr()

            return res
        
        # Used for lists
        elif curr_tok.token == "DLM_LSQUARE":
            self.idx_incr()
            lsquare = curr_tok
            list_val = self.args_list()
            rsquare = self.look_for(["DLM_RSQUARE"], self.curr_tok, Error.SyntaxError.EXPECTING_RSQUARE + self.curr_tok.line, True)
            self.idx_incr()
            return TreeSegment(lsquare, list_val, rsquare)

        # Used for unary operators
        elif self.curr_tok.token in ["OP_PLUS", "OP_MINUS", "KW_BOOL_NOT"]:
            if self.curr_tok.token == "OP_PLUS":
                self.curr_tok.token = "OP_POS"
            
            elif self.curr_tok.token == "OP_MINUS":
                self.curr_tok.token = "OP_NEG"

            return None
        
        elif curr_tok.token == "KW_ASK":
            return self.io_expr(curr_tok)

        elif curr_tok.token in ["DLM_RPRN", "DLM_TRMNTR"]:
            self.parse_error(Error.SyntaxError.EXPECTING_OPERAND, curr_tok)
        
        else:
            self.parse_error(Error.SyntaxError.INVALID_VALUE, curr_tok)

    def atom_paren(self):
        """
        Contains the contents of a equation within a parenthesis which cannot be empty. Used for expressions
        (<EXPR>)
        """
        self.look_for(["DLM_RPRN"], self.curr_tok, Error.SyntaxError.INVALID_EXPR_PAREN, False)
        return self.expr_or()

    def expr_paren(self, func, is_op: bool = False):
        """
        Function that handles different parenthetical expressions
        (specified_atom) 
        -> specified_atom refers to the values given as arguments for each statement
        Ex. For for loop the specified atoms are (<INIT> <CONDN> <UPDATE>)
            Foe a display statement specified atoms are (<VALUE>(, <VALUE>)*)
        """
        lparen = self.look_for(["DLM_LPRN"], self.curr_tok, Error.SyntaxError.EXPECTING_LPAREN + self.curr_tok.line, True)
        self.idx_incr()
        res = func()
        rparen = self.look_for(["DLM_RPRN"], self.curr_tok, Error.SyntaxError.EXPECTING_RPAREN + self.curr_tok.line, True)
        
        return res if is_op else TreeSegment(lparen, res, rparen)

    def expr_operation(self, func, acc_op: list, assoc: str): 
        """
        Recursion Function for Operator Precedence.
        """
        left_node = func()
        if self.curr_tok.token in ["DLM_TRMNTR", "WHT_NEWLINE"]:
            return left_node

        self.look_for(VALUE_LIST, self.curr_tok, Error.SyntaxError.EXPECTING_OP + self.curr_tok.line, False) 

        while self.curr_tok.token in acc_op:
            op_tok = self.curr_tok 
            self.idx_incr()
            if self.curr_tok.token == "EOF":
                break
                
            if assoc == 'L':
                right_node = func()
            
            elif assoc == 'R':
                right_node = self.expr_parse()
            
            left_node = TreeSegment(left_node, op_tok, right_node)

        return left_node

    def rule_iden(self, is_idenstmnt: bool = False):
        """
        Rules for Identifiers.
        Checks for the following
        this.iden | iden_tok.iden_tok | iden[<VALUE>] | iden(args_list)
        """
        iden_tok = self.curr_tok
        self.idx_incr()

        if iden_tok.token == "KW_THIS":
            self.look_for(["DLM_OBJECT"], self.curr_tok, Error.SyntaxError.THIS_ERROR, True)

        if self.curr_tok.token == "DLM_OBJECT":
            left_node = iden_tok
            
            while self.curr_tok.token == "DLM_OBJECT":
                self.look_for([IDENTIFIER], self.curr_tok, Error.SyntaxError.EXPECTING_IDEN + self.curr_tok.line, False)
                root_node = self.curr_tok
                right_node = self.obj_atom()
                left_node = TreeSegment(left_node, root_node, right_node)
            
            return left_node

        elif self.curr_tok.token == "DLM_LSQUARE":
            res = self.list_idx()
            return TreeSegment(None, iden_tok, res)

        elif self.curr_tok.token == "DLM_LPRN" and not is_idenstmnt:
            iden_tok = self.call_expr(iden_tok)

        return iden_tok

    def list_idx(self):
        """
        List Index for Identifiers. Ex. testList[1] <- list_idx.
        """
        lsquare = self.curr_tok
        self.idx_incr()
        if self.curr_tok.token in VALUE_LIST or self.curr_tok.token in ["DLM_LPRN", "DLM_LSQUARE", "KW_BOOL_NOT"]:
            idx_value = self.expr_or()
        
        else:
            self.parse_error(Error.SyntaxError.INVALID_VALUE, self.curr_tok)

        rsquare = self.look_for(["DLM_RSQUARE"],  self.curr_tok, Error.SyntaxError.EXPECTING_RSQUARE + self.curr_tok.line, True)
        self.idx_incr()
        if self.curr_tok.token == "DLM_LSQUARE":
            res = TreeSegment(lsquare, idx_value, rsquare)
            next_idx = self.list_idx()
            res = TreeSegment(None, res, next_idx)
            return res
        return TreeSegment(lsquare, idx_value, rsquare)

    def obj_atom(self):
        """
        Atom that can be used as a property. Ex. TestClass.test <- obj_atom
        <IDEN>
        """
        self.idx_incr()
        self.look_for([IDENTIFIER], self.curr_tok, Error.SyntaxError.EXPECTING_IDEN + self.curr_tok.line, True)
        return self.rule_iden()

    def code_block(self, is_loop = False):
        """
        The code block for complex statements.
        {
            <STMNT_LIST>
        }
        """
        self.idx_incr()
        if self.curr_tok.token == "WHT_NEWLINE":
            self.idx_incr()

        lcurly = self.look_for(["DLM_LCURLY"], self.curr_tok,  Error.SyntaxError.EXPECTING__LCURLY + self.curr_tok.line, True)
        self.idx_incr()
        while self.curr_tok.token != "DLM_RCURLY" and not self.is_done:
            sub_stmnt = self.stmnt(is_loop)

        rcurly = self.look_for(["DLM_RCURLY"], self.curr_tok,  Error.SyntaxError.EXPECTING__RCURLY + self.curr_tok.line, True)
        self.idx_incr()

        return TreeSegment(lcurly, sub_stmnt, rcurly)

    def check_order(self, order_array):
        """
        Checks the order for the main function and the import statements.
        """
        stmnt_list = []
        stmnt_order = order_array

        for i in stmnt_order:
            self.idx_incr()
            self.look_for(i[0], self.curr_tok, i[1] + self.curr_tok.line, i[2])
            stmnt_list.append(self.curr_tok)
        
        return stmnt_list

#region Statements
    def stmnt(self, is_loop: bool=False):
        """
        Collection of all possible statements in the luseed programming language.
        """
        
        if self.curr_tok.token == "WHT_NEWLINE":
            self.idx_incr()
            if self.curr_tok.token != "EOF" and self.curr_tok.token != "DLM_RCURLY":
                
                res = self.stmnt(is_loop)
                return res

            else:
                res = None
                return res

        elif self.curr_tok.token in [IDENTIFIER, "KW_THIS"]:
            curr_stmnt = self.iden_stmnt()

        elif self.curr_tok.token in ["KW_IMPORT", "KW_FROM"]:
            curr_stmnt = self.imprt_stmnt()
    
        elif self.curr_tok.token in ["KW_MAIN"]:
            curr_stmnt = self.prog_stmnt()

        elif self.curr_tok.token in DATA_TYPE:
            if self.curr_tok.token == "KW_DATA_CONST":
                const = self.curr_tok
                self.idx_incr()
                self.look_for(DATA_TYPE, self.curr_tok, Error.SyntaxError.EXPECTING_DATA_TYPE, True)
            
            else:
                const = None

            curr_stmnt = self.dec_stmnt()
            if const != None:
                curr_stmnt = TreeSegment(None, const, curr_stmnt)

        elif self.curr_tok.token in ["KW_DISPLAY", "KW_ASK"]:
            curr_stmnt = self.io_stmnt()
        
        elif self.curr_tok.token == "KW_IF":
            curr_stmnt = self.if_stmnt()

        elif self.curr_tok.token == "KW_PASS":
            curr_stmnt = self.pass_stmnt()
        
        elif self.curr_tok.token == "KW_RETURN":
            curr_stmnt = self.return_stmnt()

        elif self.curr_tok.token in ["KW_BREAK",  "KW_CONTINUE"] and is_loop:
            curr_stmnt = self.ctrl_stmnt()

        elif self.curr_tok.token in OP_UNARY.values():
            curr_stmnt = self.unary_stmnt(None, 0)

        elif self.curr_tok.token == "KW_FUNC":
            curr_stmnt = self.func_stmnt()

        elif self.curr_tok.token == "KW_LOOP_FOR":
            curr_stmnt = self.for_stmnt()

        elif self.curr_tok.token == "KW_LOOP_FOREACH":
            curr_stmnt = self.foreach_stmnt()

        elif self.curr_tok.token == "KW_LOOP_WHILE":
            curr_stmnt = self.while_stmnt()

        elif self.curr_tok.token == "KW_LOOP_DO":
            curr_stmnt = self.do_stmnt()

        elif self.curr_tok.token == "KW_LOOP_REPEAT":
            curr_stmnt = self.repeat_stmnt()

        elif self.curr_tok.token == "KW_CLASS":
            curr_stmnt = self.class_stmnt()
        
        elif self.curr_tok.token == "KW_INIT":
            curr_stmnt = self.init_stmnt()

        elif self.curr_tok.token == "KW_RAISE":
            curr_stmnt = self.raise_stmnt()

        elif self.curr_tok.token == "KW_TRY":
            curr_stmnt = self.try_stmnt()

        elif self.curr_tok.token == "KW_INFO":
            curr_stmnt = self.info_stmnt()

        elif self.curr_tok.token == "KW_SWAP":
            curr_stmnt = self.swap_stmnt()
        
        elif self.curr_tok.token == "KW_LOOP":
            loop_header = self.loop_name()
            
            if self.curr_tok.token == "KW_LOOP_FOR":
                curr_stmnt = self.for_stmnt()

            elif self.curr_tok.token == "KW_LOOP_WHILE":
                curr_stmnt = self.while_stmnt()

            elif self.curr_tok.token == "KW_LOOP_DO":
                curr_stmnt = self.do_stmnt()

            elif self.curr_tok.token == "KW_LOOP_REPEAT":
                curr_stmnt = self.repeat_stmnt()

            else:
                self.parse_error(Error.SyntaxError.EXPECTING_LOOP, self.curr_tok)

            curr_stmnt = TreeSegment(None, loop_header, curr_stmnt)

        elif self.curr_tok.token == "KW_CHECK":
            curr_stmnt = self.check_stmnt()

        elif self.curr_tok.token in ACCESS_MOD:
            modifier = self.curr_tok
            self.idx_incr()
            if self.curr_tok.token in DATA_TYPE:
                if self.curr_tok.token == "KW_DATA_CONST":
                    const = self.curr_tok
                    self.idx_incr()
                    self.look_for(DATA_TYPE, self.curr_tok, Error.SyntaxError.EXPECTING_DATA_TYPE, True)
            
                else:
                    const = None

                curr_stmnt = self.dec_stmnt()
                if const != None:
                    curr_stmnt = TreeSegment(None, const, curr_stmnt)

                curr_stmnt = TreeSegment(None, modifier, curr_stmnt)
            
            elif self.curr_tok.token == "KW_FUNC":
                curr_stmnt = self.func_stmnt()
                curr_stmnt = TreeSegment(None, modifier, curr_stmnt)

            elif self.curr_tok.token == "KW_CLASS":
                curr_stmnt = self.class_stmnt()
                curr_stmnt = TreeSegment(None, modifier, curr_stmnt)
            
            else:
                self.parse_error(Error.SyntaxError.EXPECTING_ACCESS_MOD + self.curr_tok.line, self.curr_tok)

            curr_stmnt = TreeSegment(None, modifier, curr_stmnt)

        elif self.curr_tok.token == "KW_ELIF":
            self.parse_error(Error.SyntaxError.ELIF_ERROR, self.curr_tok)

        elif self.curr_tok.token == "KW_ELSE":
            self.parse_error(Error.SyntaxError.ELSE_ERROR, self.curr_tok)

        elif self.curr_tok.token == "KW_CATCH":
            self.parse_error(Error.SyntaxError.CATCH_ERROR, self.curr_tok)

        elif self.curr_tok.token == "KW_FINALLY":
            self.parse_error(Error.SyntaxError.FINALLY_ERROR, self.curr_tok)

        elif self.curr_tok.token in LIT_DATA:
            self.parse_error(Error.SyntaxError.EXPRESSION_STMNT, self.curr_tok)

        else:
            self.parse_error(Error.SyntaxError.INVALID_STMNT + self.curr_tok.lexeme, self.curr_tok)

        if self.curr_tok.token != "DLM_RCURLY" and self.curr_tok.token != 'EOF':
            next_stmnt = self.stmnt(is_loop)
        
        else:
            next_stmnt = None
        
        res = TreeSegment(None, curr_stmnt, next_stmnt)
        return res

    def prog_stmnt(self):
        """
        Parses the program statement of luseed. This is essential in running a lusd code.
        main():{<STMNT_LIST>}
        """
        sub_stmnt = None
        stmnt_stack = []
        stmnt_stack.append(self.curr_tok)
        
        stmnt_stack.extend(self.check_order(MAIN_STMNT))
        sub_stmnt = self.code_block() 

        stmnt_header = f'({stmnt_stack[0]}, {stmnt_stack[1]}, {stmnt_stack[2]}, {stmnt_stack[3]})'

        return TreeSegment(None, stmnt_header, sub_stmnt)

    def imprt_stmnt(self):
        """
        Parses the import statements.
        Ex. import <IDEN>;
            from <IDEN> import <IDEN>;
            from <IDEN> import all;
        """
        stmnt_stack = []
        stmnt_stack.append(self.curr_tok)

        if self.curr_tok.token == "KW_IMPORT":
            import_type = IMPORT_STMNT[0]
            
        elif self.curr_tok.token  == "KW_FROM":
            import_type = IMPORT_STMNT[1]

        stmnt_stack.extend(self.check_order(import_type))
        self.idx_incr()
        if import_type == IMPORT_STMNT[0]:
            return f'({stmnt_stack[0]}, {stmnt_stack[1]}, {stmnt_stack[2]})'
        
        elif import_type == IMPORT_STMNT[1]:
            return f'({stmnt_stack[0]}, {stmnt_stack[1]}, {stmnt_stack[2]}, {stmnt_stack[3]})'

    def iden_stmnt(self):
        """
        Contains all the possible statements that can be used when an identifier is found first.
        Ex. 
        Assignment Statment -> A = 5;
        """
        identifier = self.rule_iden(True)
        
        if self.curr_tok.token in OP_ASSIGNMENT.values():
            curr_stmnt = self.assign_stmnt(identifier)

        elif self.curr_tok.token == "DLM_LPRN":
            curr_stmnt = self.call_stmnt(identifier)

        elif self.curr_tok.token in OP_UNARY.values():
            curr_stmnt = self.unary_stmnt(identifier, 1)

        elif self.curr_tok.token == "DLM_TRMNTR":
            self.parse_error(Error.SyntaxError.EXPRESSION_STMNT, self.curr_tok)
        
        else:
            self.parse_error(Error.SyntaxError.EXPECTING_IDEN_STMNT + self.curr_tok.line, self.curr_tok)

        return curr_stmnt  

    def call_stmnt(self, identifer):
        """
        This is for call statments.
        Ex. call_expr;
        """
        stmnt = self.call_expr(identifer)
        self.look_for(OP_ASSIGNMENT.values(), self.curr_tok, Error.SyntaxError.INVALID_ASSIGN, False)
        delim = self.look_for(["DLM_TRMNTR"], self.curr_tok, Error.SyntaxError.EXPECTING_SEMICOLON + self.curr_tok.line, True)
        self.idx_incr()
        return TreeSegment(None, stmnt, delim)

    def call_expr(self, identifier):
        """
        This is for call statements such as function calls and method calls.
        Ex. (args_list)
        """
        args = self.expr_paren(self.args_list)
        self.idx_incr()
        return TreeSegment(None, identifier, args)
